Fixing card heading position on mobile

--- a/css/basic.css
+++ b/css/basic.css
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family:sans-serif;
 }
 
+h2 {
+	font-size: 1.5em;
+}
+
 a {
 	color: var(--link);
 }
@@ -124,6 +128,7 @@ td {
 	position: absolute;
 	top: 2%;
 	right: 2%;
+	z-index: 2;
 }
 
 .card a.icon:visited {
@@ -145,17 +150,17 @@ li.card {
 
 @media (min-aspect-ratio: 4/3) {
 	.split-right {
-		height: 100%;
+		height: 90%;
 		width: 50%;
 		position: absolute;
-		top: 0px;
+		top: 3em;
 		right: 0px;
 	}
 	.split-left {
-		height: 100%;
+		height: 90%;
 		width: 50%;
 		position: absolute;
-		top: 0px;
+		top: 3em;
 		left: 0px;
 	}
 	.split-right.textembed {
@@ -168,19 +173,25 @@ li.card {
 
 @media (max-aspect-ratio: 4/3) {
 	.split-right {
-		height: 50%;
+		height: calc(50% - 1.5em);
 		width: 100%;
 		position: absolute;
 		bottom: 0px;
 		left: 0px;
 	}
 	.split-left {
-		height: 50%;
+		height: calc(50% - 1.5em);
 		width: 100%;
 		position: absolute;
-		top: 0px;
+		top: 3em;
 		left: 0px;
 	}
+}
+
+.card p {
+	padding-left: 1%;
+	padding-right: 1%;
+	line-height: 2em;
 }
 
 .spoiler-content {
